--feat Reseting global styles.

--- a/assets/sass/utils/variables.scss
+++ b/assets/sass/utils/variables.scss
@@ -6,3 +6,13 @@ $gray: #bfbfbf;
 $grayishViolet: #9e9aa7;
 $veryDarkBlue: #35323e;
 $veryDarkViolet: #232127;
+$white: #FFF;
+$black: #000;
+
+
+//FONTS
+$mainFont: "Poppins", sans-serif;
+
+//WEIGHT
+$normalWeight: 500;
+$boldWeight: 700;
