--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,2 +1,7 @@
-@import url('./utils/variables.scss');
-@import url('./components/header.scss');
+@import './utils/variables.scss';
+@import './components/header.scss';
+@import './base/reset.scss';
+@import './base/container.scss';
+@import './components/more-than-just-shorter-links.scss';
+@import './base/globals.scss';
+@import './utils/flex-btn.scss';
