--feat Header desktop done.

--- a/assets/sass/components/header.scss
+++ b/assets/sass/components/header.scss
@@ -3,6 +3,10 @@ header{
   padding: 32px;
   display: flex;
   justify-content: center;
+
+  .roundedBtn{
+    padding: 10px 30px;
+  }
 }
 
 .headerInner{
