--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,3 +5,4 @@
 @import './components/more-than-just-shorter-links.scss';
 @import './base/globals.scss';
 @import './utils/flex-btn.scss';
+@import './base/buttons.scss'
