--- a/assets/sass/components/more-than-just-shorter-links.scss
+++ b/assets/sass/components/more-than-just-shorter-links.scss
@@ -7,12 +7,12 @@ h1{
 }
 
 #moreThanJustShortLinksSection{
-  padding: 77px 32px;
+  padding: 77px 64px 200px;
   position: relative;
   background-image: url('../images/illustration-working.svg');
   background-repeat: no-repeat;
   background-position-x: 125%;
-  background-size: contain;
+  background-size: 60%;
 
   .roundedBtn{
     padding: 16px 50px;
