--- a/assets/sass/utils/variables.scss
+++ b/assets/sass/utils/variables.scss
@@ -2,7 +2,7 @@
 $cyan: #2acfcf;
 $lighterCyan: #9de2e0;
 $dakViolet: #3b3054;
-$red: #f46262;
+$errorColor: #f46262;
 $gray: #bfbfbf;
 $grayishViolet: #9e9aa7;
 $veryDarkBlue: #35323e;
@@ -10,6 +10,7 @@ $veryDarkViolet: #232127;
 $white: #FFF;
 $black: #000;
 $lighterBlack: #1F1F1F;
+$lightGrayishBlue: #f0f1f6;
 
 
 //FONTS
