--feat Stylizing advanced statistics column.

--- a/assets/sass/components/short-links-generator.scss
+++ b/assets/sass/components/short-links-generator.scss
@@ -11,7 +11,7 @@
     background-image: url(../images/bg-shorten-desktop.svg);
     background-size: cover;
     background-position: center;
-    background-color: $dakViolet;
+    background-color: $darkViolet;
     border-radius: 20px;
     position: absolute;
     top: -96px;
