--- a/assets/sass/utils/variables.scss
+++ b/assets/sass/utils/variables.scss
@@ -1,7 +1,7 @@
 //COLORS
 $cyan: #2acfcf;
 $lighterCyan: #9de2e0;
-$dakViolet: #3b3054;
+$darkViolet: #3b3054;
 $errorColor: #f46262;
 $gray: #bfbfbf;
 $grayishViolet: #9e9aa7;
