--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,3 +7,4 @@
 @import './components/header.scss';
 @import './components/more-than-just-shorter-links.scss';
 @import './components/short-links-generator.scss';
+@import './components/advanced-statistics.scss';
