--feat Boost your links section desktop is ready.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,3 +8,4 @@
 @import './components/more-than-just-shorter-links.scss';
 @import './components/short-links-generator.scss';
 @import './components/advanced-statistics.scss';
+@import './components/boost-your-links.scss';
