--feat Starting footer styling.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,3 +9,4 @@
 @import './components/short-links-generator.scss';
 @import './components/advanced-statistics.scss';
 @import './components/boost-your-links.scss';
+@import './components/footer.scss';
