--fix Refactoring old components folders for section and putting components for smaller stuff.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,9 +4,9 @@
 @import './base/globals.scss';
 @import './utils/flex-btn.scss';
 @import './base/buttons.scss';
-@import './components/header.scss';
-@import './components/more-than-just-shorter-links.scss';
-@import './components/short-links-generator.scss';
-@import './components/advanced-statistics.scss';
-@import './components/boost-your-links.scss';
-@import './components/footer.scss';
+@import './section/header.scss';
+@import './section/more-than-just-shorter-links.scss';
+@import './section/short-links-generator.scss';
+@import './section/advanced-statistics.scss';
+@import './section/boost-your-links.scss';
+@import './section/footer.scss';
