--feat Finishing footer desktop.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,3 +10,4 @@
 @import './section/advanced-statistics.scss';
 @import './section/boost-your-links.scss';
 @import './section/footer.scss';
+@import './components/nav/horizontal-icons.scss';
