--- a/assets/sass/section/more-than-just-shorter-links.scss
+++ b/assets/sass/section/more-than-just-shorter-links.scss
@@ -1,38 +1,58 @@
-h1{
+h1 {
   font-size: 5rem;
   font-weight: $boldWeight;
   line-height: 1.1em;
   color: $veryDarkBlue;
   margin: 0 0 8px;
+
+  @include mobile {
+    font-size: 2.25rem;
+  }
 }
 
-#moreThanJustShortLinksSection{
+#moreThanJustShortLinksSection {
   padding: 77px 32px 240px;
   position: relative;
-  background-image: url('../images/illustration-working.svg');
+  background-image: url("../images/illustration-working.svg");
   background-repeat: no-repeat;
   background-position-x: 125%;
   background-size: 55%;
 
-  .roundedBtn{
+  @include mobile {
+    background-size: 130%;
+    background-position-x: calc(150% + 200px);
+    padding: 90% 16px 160px;
+    text-align: center;
+  }
+
+  .roundedBtn {
     padding: 16px 50px;
     font-size: 18px;
   }
 
-  h2{
+  h2 {
     font-size: 1.5rem;
     font-weight: $normalWeight;
     line-height: 1.1em;
     margin-bottom: 32px;
+
+    @include mobile{
+      font-size: 1.125rem;
+      margin-bottom: 16px;
+    }
   }
 }
 
-.moreThanJustShortLinksSectionInner{
+.moreThanJustShortLinksSectionInner {
   display: flex;
   align-items: center;
 }
 
-.moreThanJustShortLinksInnerCol{
+.moreThanJustShortLinksInnerCol {
   width: 50%;
   flex-shrink: 0;
+
+  @include mobile {
+    width: 100%;
+  }
 }
