--- a/assets/sass/section/advanced-statistics.scss
+++ b/assets/sass/section/advanced-statistics.scss
@@ -2,6 +2,10 @@
   background-color: $lightGrayishBlue;
   padding: 0 32px 154px;
 
+  @include mobile{
+    padding: 0 16px 154px;
+  }
+
   h2,
   .sectionSubtitle{
     text-align: center;
@@ -11,14 +15,23 @@
     font-size: 2.2rem;
     color: $veryDarkBlue;
     margin-bottom: 16px;
+
+    @include mobile{
+      font-size: 1.5rem;
+    }
   }
 
   .sectionSubtitle{
     font-size: 1.2rem;
     font-weight: $normalWeight;
-    width: 518px;
+    max-width: 518px;
     margin: 0 auto;
     color: $grayishViolet;
+
+    @include mobile{
+      font-size: 1.125rem;
+      line-height: 1.125em;
+    }
   }
 }
 
@@ -28,6 +41,10 @@
   position: relative;
   margin-top: 77px;
 
+  @include mobile{
+    flex-direction: column;
+  }
+
   &::after{
     content: '';
     position: absolute;
@@ -36,6 +53,13 @@
     background-color: $cyan;
     top: calc(50% - 4px);
     z-index: 1;
+
+    @include mobile{
+      height: 100%;
+      top: 0;
+      width: 8px;
+      left: calc(50% - 4px);
+    }
   }
 
   .advantagedStatisticsColumn{
@@ -45,6 +69,11 @@
     border-radius: 8px;
     position: relative;
     z-index: 6;
+
+    @include mobile{
+      width: 100%;
+      text-align: center;
+    }
 
     &:nth-of-type(2){
       top: 45px;
@@ -70,6 +99,10 @@
       border-radius: 50%;
       position: absolute;
       top: -42px;
+
+      @include mobile{
+        left: calc(50% - 42.5px);
+      }
     }
   
     .advantagedStatisticColumnTitle{
