--- a/assets/sass/section/footer.scss
+++ b/assets/sass/section/footer.scss
@@ -5,6 +5,10 @@ footer{
   justify-content: center;
   color: #FFF;
 
+  @include mobile{
+    padding: 64px 16px;
+  }
+
   .socialNetNav{
     display: inline-flex;
     gap: 16px;
@@ -15,6 +19,13 @@ footer{
 .footerInner{
   display: flex;
   gap: 98px;
+
+  @include mobile{
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    text-align: center;
+  }
 
   .col:first-of-type{
     flex: 1;
@@ -32,6 +43,10 @@ footer{
   margin-bottom: 32px;
   font-weight: $boldWeight;
   font-size: 1.125rem;
+
+  @include mobile{
+    margin-bottom: 16px;
+  }
 }
 
 .footerNavigation{
