--fix Fixing generating links wrapper background image for mobile devices.

--- a/assets/sass/section/short-links-generator.scss
+++ b/assets/sass/section/short-links-generator.scss
@@ -22,8 +22,10 @@
     width: 100%;
 
     @include mobile{
-      padding: 16px;
+      padding: 20px;
       width: 100%;
+      background-image: url(../images/bg-shorten-mobile.svg);
+
     }
   }
 
