--feat Opening and closing menu on mobile.

--- a/assets/sass/components/nav/hamburg-btn.scss
+++ b/assets/sass/components/nav/hamburg-btn.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   gap: 6px;
   display: inline-flex;
+  color: $grayishViolet;
+  font-size: 24px;
+  font-weight: 500;
 
   span{
     background-color: $grayishViolet;
